--- a/style.css
+++ b/style.css
@@ -547,26 +547,10 @@ p{
   .speakers img{
     margin-top: 20px;
     display: flex;
-    gap: 1rem; /* Reduced from 1.5rem */
-    align-items: flex-start;
-  }
-  /*
-  .container-icon{
-    width: 500px; 
-    height: 500px; 
-    object-fit: contain;
-    flex-shrink: 0;
-    margin-top: -10px; 
-  }
-  .container-text{
-    display: flex;
-    margin-top: 5rem;
     gap: 1rem; 
     align-items: flex-start;
-    margin-left: .5rem;
-    margin-bottom: 1.2rem; 
   }
-*/
+
 .speakers h1{
     margin-top: 40px;
     text-align: center;
@@ -609,9 +593,9 @@ p{
   
   .socials {
     display: flex;
-    flex-direction: column; /* Stack buttons vertically */
+    flex-direction: column; 
     align-items: center;
-    gap: 1rem; /* Space between buttons */
+    gap: 1rem; 
     margin-top: 2rem;
   }
   
@@ -630,8 +614,8 @@ p{
     gap: 0.8rem;
     transition: all 0.3s ease;
     backdrop-filter: blur(5px);
-    width: 250px; /* Fixed width for all buttons */
-    justify-content: center; /* Center content */
+    width: 250px; 
+    justify-content: center; 
   }
   
   .socialbtn:hover {
@@ -701,7 +685,6 @@ form {
     margin-bottom: 5px;
     font-family: 'Noto Sans', sans-serif;
 }
-/* Make the submit button and event day select span full width */
 .form-group:has(#dates),
 .form-group:has(.submit-btn) {
     grid-column: 1 / -1;
@@ -730,7 +713,7 @@ select {
     height: 50px;
     margin: 5px 0;
 }
-/* Style for select dropdown */
+
 select {
     appearance: none;
     -webkit-appearance: none;
@@ -741,13 +724,13 @@ select {
     background-size: 24px;
     padding-right: 40px;
 }
-/* Green highlight for dropdown */
+
 select:focus {
     outline: none;
     border-color: #4CAF50;
 }
 option {
-    color: black; /* For better readability of options */
+    color: black; 
     background: white;
 }
 .submit-btn {
@@ -769,7 +752,7 @@ option {
     color: #B3B4BD;
     opacity: 1;
 }
-/* ===== BURGER MENU ===== */
+/* BURGER MENU */
 /* Hide burger menu by default */
 .burger-menu {
   display: none;
